# tetris_AI

./: README.md
s101cmake-sfml-tetris-main/s101cmake-sfml-tetris-main/: CMakeLists.txt  LICENSE.md  PROJECT.md
s101cmake-sfml-tetris-main/s101cmake-sfml-tetris-main/include/: Game.h  GeneticAlgorithm.h  Tetris.h
s101cmake-sfml-tetris-main/s101cmake-sfml-tetris-main/src/: Game.cpp  GeneticAlgorithm.cpp  Tetris.cpp  main.cpp
